@@ -26,7 +26,7 @@ require('include/init.inc.php');
 
 if (!USER_ID && ($CONFIG['allow_unlogged_access'] <= 1)) {
 
-    $redirect = $redirect . "login.php";
+    $redirect = 'login.php';
 
     if ($matches = $superCage->server->getMatched('QUERY_STRING', '/^[a-zA-Z0-9&=_\/.-]+$/')) {
         $redirect .= '?force_login=1&referer='.urlencode('displayimage.php?'.$matches[0]);
