@@ -23,7 +23,7 @@ define('SEARCH_PHP', true);
 require('include/init.inc.php');
 
 if (!USER_ID && $CONFIG['allow_unlogged_access'] == 0) {
-    $redirect = $redirect . "login.php";
+    $redirect = 'login.php';
     header("Location: $redirect");
     exit();
 }
